--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Portifolio Kaue</title>
+  <title>Portifólio - kaue</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
+  <header></header> <!-- aqui é o cabecalho-->
+
+  <main>
+    <h1> Eleve seu negócio digital a outro nível <strong>com um Front-End de respeito!</strong></h1>
+
+    <p>Olá! Meu nome é Kaue, jogo bola tomeleko des dos 12 anos! </p>
+
+    <a href="https://www.instagram.com/kauex.09">instagram</a>
+    <a href="https://kauex1010.github.io">GitHub</a>
+    <img class= "foto" src="foto.png"
+  </main> <!-- aqui é a parte principal-->
+  <footer></footer> <!--  rodapé -->
   <script src="script.js"></script>
 </body>
 
